--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
         <div class="card">
             <div class="card-image">
-                <img src="../images/newyork.jpg" width="100%" alt="">
+                <img src="./Images/blue hellebore.jpeg" width="100%" alt="">
                 <div class="card-text">Genre Name</div>
                 <div class="card-body">
                     <img src="./Images/neon.jpg" alt="">
